# latex-cv

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
src/: academic.tex  eu.tex  us.tex
src/auxiliary/: dictionary.txt  preamble.tex  publications.bib
src/sections/: affiliations.tex  education.tex  experience.tex  grants.tex  honours.tex  languages.tex  overview.tex  programming.tex  publications.tex  software.tex  volunteering.tex
